for second commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <title>Document</title>
 </head>
 <body>
-   
+   <h1>this is my body</h1>
+   <p>making changes for my version 2 of index file , basically for my second commit.</p>
+   <p>just to see git diff command</p>
 </body>
 </html>
