--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h1>this is my body</h1>
    <p>making changes for my version 2 of index file , basically for my second commit.</p>
    <p>just to see git diff command</p>
+   <p>dor third version</p>
 </body>
 </html>
