new v in dsign branch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
    <p>making changes for my version 2 of index file , basically for my second commit.</p>
    <p>just to see git diff command</p>
    <p>dor third version</p>
-   <p>designing p element. </p>
+   <p>designing p element. new version</p>
 </body>
 </html>
